# Cold-Mailer-MCP

./: README.md  main.py  prompt.docx  pyproject.toml  resume.docx
